<resources>
    <string name="app_name">PictureIT</string>
    <string name="title_negatives">Negatives</string>
    <string name="title_home">Gallery</string>
    <string name="title_positives">Positives</string>
    <string name="title_results">Results</string>
    <string name="hello">It works!</string>

    <string name="settings">Settings</string>

    <string name="expand">Expand</string>
    <string name="refresh">Refresh</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>

    <string name="close">Close</string>
    <string name="help_button">Help</string>
    <string name="start_over_button">Start Over</string>
    <string name="fast_forward_button">Fast Forward</string>
    <string name="intro_text">Hej! We wanna give you a short introduction on how to use Mobile Exquisitor to explore your photo collection. It won\'t take longer than 3 min.</string>
    <string name="intro_rating_text">You can always find the current suggestions on the Main Screen. You can rate an image by clicking on it and then swiping it to the right in case you want to rate it as positive, or to the left if you consider it as a negative example. </string>
    <string name="intro_reload_what">Reload will give you six random images that you haven’t seen so far.</string>
    <string name="intro_reload_when_to_use">It can help if you get stuck in one topic, and you want to turn the search in a new direction but you don’t want to start an entirely new session.</string>
    <string name="intro_navigation_text">You can check the images that you rated by going to the Negatives or Positives Screens. To remove one of your ratings, hold your finger on the image.</string>
    <string name="intro_fast_forward_what">Fast forward will put the six images closest to your positively rated examples on the screen.</string>
    <string name="intro_fast_forward_when_to_use">It can help if you feel that you are on a right track and want to explore the suggested photos quickly.</string>
    <string name="when_to_use">When to use?</string>
    <string name="intro_help_text">Don\'t worry. You don\'t have to remember all of this. You can always look it up pressing the help button.</string>
    <string name="intro_start_over_what">The start over deletes all your prior ratings and starts a completely new session.</string>
    <string name="intro_start_over_when_to_use">It can help if you would like to start searching in a new and different category.</string>
    <string name="updateButton">Update</string>
    <string name="removeThisPicture">\" remove this picture? remove this picture? remove this picture? remove this picture? remove this picture? remove this picture? remove this picture? remove this picture? remove this picture? remove this picture? remove this picture? remove this picture? remove this picture? remove this picture?\"</string>
    <string name="browseForResultForTv">Browse</string>
    <string name="showResultsFirstTv">Show Results</string>
    <string name="history">History</string>
    <string name="build">Build</string>
    <string name="start_over">Start Over</string>
    <string name="random_photos">Random Photos</string>
    <string name="browse">Browse</string>
    <string name="list_of_negative_pictures">Negative Pictures</string>
    <string name="results_of_browsing">Results of Browsing</string>
    <string name="picture_details">Picture Details</string>
    <string name="positive_pictures">Positive Pictures</string>
    <string name="gallery">Gallery</string>
    <string name="results">Results</string>
    <string name="new_photos">New Photos</string>
    <string name="share_photo">Share Photo</string>
    <string name="pleaseReload">The view did not load the results.\nTry and press the reload button.</string>
    <string name="add_positive">You have to add an image to Positive.\nOtherwise This view will show.\nYou add a Positive by swiping right in Pictures or Results.\nPress button to go to Pictures.</string>
    <string name="add_negative">You have to add an image to Negative.\nOtherwise This view will show.\nYou add a Negative by swiping left in Pictures or Results.\nPress button to go to Pictures.</string>
    <string name="discover">Discover</string>
    <string name="pictures">Pictures</string>
    <string name="saved_models">Load Model</string>
    <string name="delete_all_models">Delete All Models</string>
    <string name="save_model">Save Model</string>
</resources>
